--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,8 @@
 			<h1 id="aboutTitle">About SpecIF Tools</h1>
 			<p>A family of tools for your web-browser to transform partial specifications:</p>
 			<ul>
-				<li><a href="./sheet2reqif.html" target="_blank">Sheet to ReqIF</a> (<a href="https://enso-managers.de/tools/manual-sheet2reqif.html" target="_blank">Quick Start Guide</a>)</li>
+				<li><a href="./sheet2reqif.html" target="_blank">Sheet to ReqIF</a> (<a href="https://enso-managers.de/tools/intro-sheet2reqif.html" target="_blank">Introduction</a>)</li>
 			</ul>
-			<p>If you experience unexpected or faulty behavior of the software, please open a <a href="https://github.com/enso-managers/SpecIF-Tools/issues" target="_blank">new issue</a>.</p>
 			<p>Version: App v<span id="appVersion"></span>.</p>
 			<p>License: <a href="https://github.com/GfSE/SpecIF-Viewer/blob/master/LICENSE" target="_blank">Apache 2.0</a></p>
 			<h2>Introduction</h2>
@@ -232,8 +231,8 @@
 		    <h3>No Guarantee and No Liability</h3>
 			<p>
 				SpecIF and the SpecIF viewer are provided "as-is" and without guaranteed characteristics. Use is always at your own risk. 
-				Any liability and guarantee are excluded. The installation at <a href="http://specif.de/apps/" target="_blank">http://specif.de/apps/</a> 
-				and the code maintained at <a href="https://github.com/GfSE" target="_blank">https://github.com/GfSE</a> is a reference implementation 
+				Any liability and guarantee are excluded. The installation at <a href="https://tools.enso-managers.de/" target="_blank">https://tools.enso-managers.de/</a> 
+				and the code maintained at <a href="https://github.com/enso-managers" target="_blank">https://github.com/enso-managers</a> is a reference implementation 
 				and not designed for high loads and high availability.
 			</p>
 
