--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>SpecIF Tools to Transform System Specifications</title>
+	<meta name="description" content="A family of tools for your web-browser to transform partial system specifications">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="expires" content="0" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./assets/stylesheets/SpecIF.default.css" />
-	<title>SpecIF Tools</title>
 </head>
 <body style="overflow:auto;">
 	<div class="container">
 	<div class="row">
 		<div class="col-lg">
 			<h1 id="aboutTitle">About SpecIF Tools</h1>
-			<p>A family of tools for your web-browser to transform partial specifications:</p>
+			<p>A family of tools for your web-browser to transform partial system specifications:</p>
 			<ul>
-				<li><a href="./sheet2reqif.html" target="_blank">Sheet to ReqIF</a> (<a href="https://enso-managers.de/tools/intro-sheet2reqif.html" target="_blank">Introduction</a>)</li>
+				<li>Transform requirements from Excel to ReqIF: <a href="./sheet2reqif.html" target="_blank">Sheet to ReqIF</a> (<a href="https://enso-managers.de/tools/intro-sheet2reqif.html" target="_blank">Introduction</a>)</li>
 			</ul>
 			<p>Version: App v<span id="appVersion"></span>.</p>
 			<p>License: <a href="https://github.com/GfSE/SpecIF-Viewer/blob/master/LICENSE" target="_blank">Apache 2.0</a></p>
